fix header on IE

--- a/source/_assets/sass/_style_homepage.scss
+++ b/source/_assets/sass/_style_homepage.scss
@@ -16,6 +16,7 @@
   }
   p { font-size: 1.5rem;  }
 }
+#maincontent.homepage { margin-bottom: 0; }
 .homepage-banner .hero {
   min-height: auto;
   margin-top: 0;
