--- a/source/_assets/sass/_style_menu.scss
+++ b/source/_assets/sass/_style_menu.scss
@@ -13,6 +13,7 @@
   }
 }
 
+.nav .d-flex > * { min-height:0; overflow:hidden;   }  
 .navbar-toggler {
   text-align: left;
   padding-top: 15px;
