--- a/source/_assets/sass/_style_topnav.scss
+++ b/source/_assets/sass/_style_topnav.scss
@@ -25,7 +25,7 @@
 }
 
 #mobile-menu-button {
-  .menubaricon { width: 1rem; } 
+  .menubaricon { width: 1rem; height: 1rem; } 
   .menubartext {
     display: inline-block;
     position: relative;
